# REMINA

./: CMakeLists.txt  mod.json
.github/workflows/: multi-platform.yml
src/: game.cpp  main.cpp
